--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -1,10 +1,10 @@
-{% extends 'index/results_base.html' %}
+{% extends 'results_base.html' %}
 
 {% block title %}
 dopepod
 {% endblock %}
 
-{% block results_x %}
+{% block results_content %}
 <div class="row results-content">
   <div class="col">
     {% for subscription in subscriptions %}
