--- a/index/static/style.css
+++ b/index/static/style.css
@@ -44,9 +44,12 @@ body {
 .btn-dope.active, .btn-dope:hover {
   color: #fff;
   background: rgba(0, 204, 122, 1);
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 3px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 0px 3px;
-  box-shadow: rgba(0,0,0,.3) 0 0px 3px;
+  -webkit-box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
+  -moz-box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
+  box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
+}
+.btn-dope-podinfo {
+  max-width: 100%
 }
 .btn-dope-tab {
   border-radius: 2rem .25rem 0 0;
@@ -112,10 +115,12 @@ body {
 #navbar-drop {
   padding: 0;
 }
-#navbar a:hover {
-  color: #fff;
+#navbar .navbar-toggler:hover {
+  color: #2e2e2e;
+  background: #ddd;
 }
 .navbar-dropdown {
+  margin-top: 5px;
   min-width: 0;
 }
 .nav-link {
@@ -310,6 +315,7 @@ body {
   padding: 10px 2px 6px 10px;
 }
 .selected-group {
+  text-align: center;
   padding: 10px 2px 6px 10px;
 }
 .options-button, .options-button:focus, .options-button.focus {
@@ -420,13 +426,12 @@ body {
 }
 
 #center-stage {
-  background-color: #fff;
+
 }
 
 /* SPLASH */
 #splash {
-  font-size: 16px;
-  background: #fff;
+
 }
 #splash-top {
   text-align: center;
@@ -437,36 +442,29 @@ body {
 }
 
 /* LOGIN-SIGNUP */
+#login {
+  height: 400px;
+  background: #fff;
+  text-align: center;
+  padding-top: 15px;
+}
+#login-buttons {
+  padding-top: 10px;
+  display: block;
+}
 #login-errors {
-  width: 300px;
+  padding-top: 10px;
   margin: auto;
 }
 #login-errors .alert {
   padding: 10px;
-  margin-bottom: 10px;
+  margin: 0;
 }
 #login-wrapper {
   padding: 10px 10px 0 10px;
   width: 300px;
   height: 148px;
   margin: auto;
-}
-.login-form-group {
-  margin: 0;
-}
-#login-signup-buttons {
-  display: block;
-  padding: 10px;
-}
-#social-login {
-  text-align: center;
-  width: 300px;
-  padding-top: 10px;
-  margin: auto;
-}
-#social-login a, #social-login a:hover {
-}
-.social-link {
 }
 .login-field {
   padding: 5px 8px;
@@ -515,29 +513,24 @@ body {
 
 /* PODINFO */
 #podinfo {
-  position: relative;
-  padding: 15px 15px 0 15px;
-  height: 400px;
   background-color: #fff;
+  height: 400px;
+}
+#podinfo-top {
+  height: 345px;
+  padding-top: 15px;
+}
+#podinfo-bottom {
+  padding-top: 10px;
 }
 #podinfo-main {
   text-align: justify;
-  padding: 15px 15px 0 0;
-  height: 330px;
   overflow: hidden;
 }
 #podinfo-side {
-  height: 360px;
-  padding-top: 15px;
-  padding-bottom: 0;
-  overflow: hidden;
+  padding-right: 0;
 }
-#podinfo-bottom {
-  bottom: 0;
-  right: 0;
-  position: absolute;
-  padding-top: 10px;
-  padding-bottom: 10px;
+#podinfo-options {
 }
 #podinfo-side-list {
   list-style: none;
@@ -602,7 +595,7 @@ body {
   padding-top: 10px;
   padding-bottom: 10px;
   overflow: hidden;
-  border-bottom: 5px solid rgba(0, 204, 122, 1);
+  border-bottom: 4px solid rgba(0, 204, 122, 1);
   -webkit-box-shadow: inset rgba(0,0,0,.3) 0 -1px 2px;
   -moz-box-shadow: inset rgba(0,0,0,.3) 0 -1px 2px;
   box-shadow: inset rgba(0,0,0,.3) 0 -1px 2px ;
