--- a/index/templates/account/signup.html
+++ b/index/templates/account/signup.html
@@ -1,15 +1,8 @@
-{% if form.errors %}
-<div class="alert alert-danger alert-dismissible fade show" role="alert">
-  {% for field in form %}
-    {% for error in field.errors %}
-      {{ error }}
-    {% endfor %}
-  {% endfor %}
-  {% for error in form.non_field_errors %}
-    {{ error }}
-  {% endfor %}
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-{% endif %}
+{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
+
+{% block title %}
+dopepod
+{% endblock %}
+
+{% block results %}
+{% endblock %}
