--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,27 +1,27 @@
 <div class="col-3 col-md-4">
-  <a class="nav-link navbar-toggler" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <a class="navbar-toggler toggle" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
   </a>
-  <div class="dropdown-menu navbar-dropdown color-2" aria-labelledby="navbarDropdownMenuLink">
+  <div class="dropdown-menu navbar-dropdown color-2" aria-labelledby="navbar-dropdown">
     <ul class="nav nav-fade d-block">
-      <!-- <li class="nav-item">
-        <a class="nav-link blog-link" href="#">
+      <!-- <li>
+        <a class="blog-link" href="#">
           Blog
         </a>
       </li> -->
-      <li class="nav-item">
-        <a class="nav-link browse-link" href="{% url 'browse' %}">
+      <li>
+        <a class="browse-link" href="{% url 'browse' %}">
           Browse
         </a>
       </li>
       {% if user.is_authenticated %}
-      <li class="nav-item">
-        <a class="nav-link subscriptions-link" href="{% url 'subscriptions' %}">
+      <li>
+        <a class="subscriptions-link" href="{% url 'subscriptions' %}">
           Subscriptions
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link settings-link" href="{% url 'settings' %}">
+      <li>
+        <a class="settings-link" href="{% url 'settings' %}">
           Settings
         </a>
       </li>
@@ -29,19 +29,19 @@
     </ul>
   </div>
   <ul class="nav nav-fade">
-    <!-- <li class="nav-item">
-      <a class="nav-link blog-link d-none d-md-block" href="#">
+    <!-- <li>
+      <a class="blog-link d-none d-md-block" href="#">
         Blog
       </a>
     </li> -->
-    <li class="nav-item">
-      <a class="nav-link browse-link d-none d-md-block" href="{% url 'browse' %}">
+    <li>
+      <a class="browse-link d-none d-md-block" href="{% url 'browse' %}">
         Browse
       </a>
     </li>
     {% if user.is_authenticated %}
-    <li class="nav-item">
-      <a class="nav-link subscriptions-link d-none d-md-block" href="{% url 'subscriptions' %}">
+    <li>
+      <a class="subscriptions-link d-none d-md-block" href="{% url 'subscriptions' %}">
         Subscriptions
       </a>
     </li>
@@ -49,7 +49,7 @@
   </ul>
 </div>
 <div class="col-6 col-md-4" id="logo" >
-  <a class="index-link" href="{% url 'index' %}">
+  <a class="index-link" href="/">
     <span class="x a">
       d
     </span>
@@ -76,31 +76,31 @@
 <div class="col-3 col-md-4">
   <ul class="nav nav-fade">
     {% if user.is_authenticated %}
-    <li class="nav-item ml-auto">
-      <a class="nav-link settings-link d-none d-md-block" href="{% url 'settings' %}">
+    <li class="ml-auto">
+      <a class="settings-link d-none d-md-block" href="{% url 'settings' %}">
         Settings
       </a>
-      <a class="nav-link ajax-logout d-block d-md-none" href="{% url 'account_logout' %}">
+      <a class="ajax-logout d-block d-md-none" href="{% url 'account_logout' %}">
         <i class="fas fa-sign-out-alt"></i>
       </a>
     </li>
-    <li class="nav-item d-none d-md-block">
-      <a class="nav-link ajax-logout" href="{% url 'account_logout' %}">
+    <li class="d-none d-md-block">
+      <a class="ajax-logout d-none d-md-block" href="{% url 'account_logout' %}">
         Logout
       </a>
     </li>
     {% else %}
-    <li class="nav-item ml-auto">
-      <a class="nav-link ajax-register d-none d-md-block" href="/?signup=yeah">
-        Register
-      </a>
-      <a class="nav-link ajax-login d-block d-md-none" href="{% url 'index' %}">
-        <i class="fas fa-sign-in-alt"></i>
+    <li class="ml-auto">
+      <a class="ajax-login d-none d-md-block" href="/">
+        Login
       </a>
     </li>
-    <li class="nav-item d-none d-md-block">
-      <a class="nav-link ajax-login" href="{% url 'index' %}">
-        Login
+    <li>
+      <a class="ajax-signup d-none d-md-block" href="/?signup=yeah">
+        Signup
+      </a>
+      <a class="ajax-login d-block d-md-none" href="/">
+        <i class="fas fa-sign-in-alt"></i>
       </a>
     </li>
     {% endif %}
