--- a/index/templates/settings.html
+++ b/index/templates/settings.html
@@ -1,4 +1,4 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
+{% extends request.is_ajax|yesno:'ajax.html,base.html' %}
 
 {% block title %}
 settings
