--- a/podcasts/templates/podinfo.html
+++ b/podcasts/templates/podinfo.html
@@ -1,102 +1,108 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
+{% extends request.is_ajax|yesno:'ajax.html,base.html' %}
 
 {% block title %}
 {{ podcast.title }}
 {% endblock %}
 
 {% block center-stage %}
-<div class="row" id="podinfo">
-  <div class="col-4 col-md-3 col-lg-2" id="podinfo-side">
-    <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}350x350bb.jpg" />
-    <ul id="podinfo-side-list">
-      <li>
-        <span id="n_subscribers">
-          {{ podcast.n_subscribers }}
-        </span>
-        <span id="subscriber">
-          subscriber{{ podcast.n_subscribers|pluralize }}
-        </span>
-      </li>
-      <li>
-        <span>
-          Genre:
-        </span>
-        <span id="podinfo-genre">
-          {% if podcast.genre.supergenre %}
-          {{ podcast.genre.supergenre }} -
-          {% endif %}
-          {{ podcast.genre }}
-        </span>
-      </li>
-      <li>
-        <span>
-          Language:
-        </span>
-        <span id="podinfo-language">
-          {{ podcast.language }}
-        </span>
-      </li>
-      <li>
-        <span>
-          Content:
-        </span>
-        <span id="podinfo-explicit">
-          {% if podcast.explicit %}
-          explicit
-          {% else %}
-          clean
-          {% endif %}
-        </span>
-      </li>
-      <li>
-        <em>
-          <span id="podinfo-copyright">
-            {{ podcast.copyrighttext }}
+<div class="row">
+  <div class="col col-lg-8 offset-lg-2" id="podinfo">
+    <div class="row" id="podinfo-top">
+      <div class="col-4" id="podinfo-side">
+        <img class="img-fluid" src="//images.weserv.nl/?url={{ podcast.artworkUrl }}300x300bb.jpg&w=300&h=300&t=absolute" />
+        <ul id="podinfo-side-list">
+          <li>
+            <span id="n_subscribers">
+              {{ podcast.n_subscribers }}
+            </span>
+            <span id="subscriber">
+              subscriber{{ podcast.n_subscribers|pluralize }}
+            </span>
+          </li>
+          <li>
+            <span>
+              Genre:
+            </span>
+            <span id="podinfo-genre">
+              {% if podcast.genre.supergenre %}
+              {{ podcast.genre.supergenre }} -
+              {% endif %}
+              {{ podcast.genre }}
+            </span>
+          </li>
+          <li>
+            <span>
+              Language:
+            </span>
+            <span id="podinfo-language">
+              {{ podcast.language }}
+            </span>
+          </li>
+          <li>
+            <span>
+              Content:
+            </span>
+            <span id="podinfo-explicit">
+              {% if podcast.explicit %}
+              explicit
+              {% else %}
+              clean
+              {% endif %}
+            </span>
+          </li>
+          <li>
+            <em>
+              <span id="podinfo-copyright">
+                {{ podcast.copyrighttext }}
+              </span>
+            </em>
+          </li>
+        </ul>
+      </div>
+      <div class="col-8" id="podinfo-main">
+        <h5 id="podinfo-title">
+          {{ podcast.title }}
+        </h5>
+        <h6 id="podinfo-artist">
+          <span>
+            By
           </span>
-        </em>
-      </li>
-    </ul>
-  </div>
-  <div class="col-8 col-md-9 col-lg-10" id="podinfo-main">
-    <h5 id="podinfo-title">
-      {{ podcast.title }}
-    </h5>
-    <h6 id="podinfo-artist">
-      <span>
-        By
-      </span>
-      {{ podcast.artist }}
-    </h6>
-    <p id="podinfo-description">
-      {{ podcast.description }}
-    </p>
-  </div>
-  <div class="col-auto ml-auto" id="podinfo-bottom">
-    {% if user.is_authenticated %}
-    <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}"
-    id="{{ podcast.itunesid }}" method="POST">
-    {% csrf_token %}
-    <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
-    {% if podcast.is_subscribed %}
-    <button type="submit" class="btn btn-dope sub-button">
-      Unsubscribe
-    {% else %}
-      <button type="submit" class="btn btn-dope active sub-button">
-        Subscribe
-    {% endif %}
-      </button>
-    </form>
-    {% endif %}
-    <a class="btn btn-dope toggle" id="show-episodes" href="#">
-      <span>
-        Episodes
-      </span>
-    </a>
-    <button class="btn btn-dope btn-dope-disabled">
-      <span>
-        Reviews
-      </span>
-    </button>
+          {{ podcast.artist }}
+        </h6>
+        <p id="podinfo-description">
+          {{ podcast.description }}
+        </p>
+      </div>
+    </div>
+    <div class="row" id="podinfo-bottom">
+      <div class="col" id="podinfo-options">
+        {% if user.is_authenticated %}
+        <form class="d-inline" id="sub-form" action="{% url 'subscribe' %}"
+        id="{{ podcast.itunesid }}" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="itunesid" value="{{ podcast.itunesid }}">
+        {% if podcast.is_subscribed %}
+        <button type="submit" class="btn btn-dope btn-dope-podinfo sub-button">
+          Unsubscribe
+          {% else %}
+          <button type="submit" class="btn btn-dope btn-dope-podinfo active sub-button">
+            Subscribe
+            {% endif %}
+          </button>
+        </form>
+        {% endif %}
+        <a class="btn btn-dope btn-dope-podinfo toggle" id="show-episodes" href="#">
+          <span>
+            Episodes
+          </span>
+        </a>
+        <button class="btn btn-dope btn-dope-podinfo btn-dope-disabled">
+          <span>
+            Reviews
+          </span>
+        </button>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
