--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -1,4 +1,4 @@
-{% extends request.is_ajax|yesno:'ajax.html,index/index.html' %}
+{% extends request.is_ajax|yesno:'ajax.html,base.html' %}
 
 {% block title %}
 dopepod
@@ -12,7 +12,7 @@ dopepod
     </div>
     <div class="col-auto results-options">
       <ul>
-          {% if selected_genre %}
+        {% if selected_genre %}
           <li>
             <a class="btn btn-dope btn-dope-tab active toggle" data-toggle="collapse" href="#genre-collapse" aria-expanded="false" aria-controls="genre-collapse">
               Genre
@@ -45,69 +45,75 @@ dopepod
   <form id="results-form" method="GET" action="{% url 'search' %}">
   {% elif subscriptions %}
   <form id="subscriptions-form" method="GET" action="{% url 'subscriptions' %}">
+  {% elif episodes %}
+  <form id="episodes-form" method="GET" action="{% url 'podinfo' %}">
   {% else %}
   <form id="results-form" method="GET" action="{% url 'browse' %}">
   {% endif %}
-    <div class="row options-select color-1" id="selected-buttons" data-toggle="buttons">
-      {% if selected_q or selected_alphabet %}
-        <div class="col-auto mr-auto selected-group">
-          {% if selected_q %}
-            <label class="btn btn-dope options-button active">
-              <input class="field-button" type="checkbox" name="selected-q" value="{{ selected_q }}" checked>
-              {{ selected_q }}
-            </label>
-          {% endif %}
-          {% if selected_alphabet %}
-            <label class="btn btn-dope options-button active">
-              <input class="field-button" type="checkbox" name="selected-q" value="{{ selected_alphabet }}" checked>
-              {{ selected_alphabet }}
-            </label>
-          {% endif %}
-        </div>
-      {% endif %}
-      {% if selected_genre or selected_language %}
-        <div class="col options-group">
-          {% if selected_genre %}
-            <label class="btn btn-dope options-button active">
-              <input class="field-button" type="checkbox" name="selected-genre" value="{{ selected_genre }}" checked>
-              {{ selected_genre }}
-            </label>
-          {% endif %}
-          {% if selected_language %}
-            <label class="btn btn-dope options-button active">
-              <input class="field-button" type="checkbox" name="selected-language" value="{{ selected_language }}" checked>
-              {{ selected_language }}
-            </label>
-          {% endif %}
-        </div>
-      {% endif %}
-    <div class="collapse options-collapse" id="genre-collapse">
-      {% if genres %}
+  <div class="row options-select color-1" id="selected-buttons" data-toggle="buttons">
+    {% if selected_q or selected_alphabet %}
+      <div class="col selected-group">
+        {% if selected_q %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="checkbox" name="selected-q" value="{{ selected_q }}" checked>
+            {{ selected_q }}
+            <i class="fas fa-times-circle"></i>
+          </label>
+        {% endif %}
+        {% if selected_alphabet %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="checkbox" name="selected-q" value="{{ selected_alphabet }}" checked>
+            {{ selected_alphabet }}
+            <i class="fas fa-times-circle"></i>
+          </label>
+        {% endif %}
+      </div>
+    {% endif %}
+    {% if selected_genre or selected_language %}
+      <div class="col-auto ml-auto options-group">
+        {% if selected_genre %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="checkbox" name="selected-genre" value="{{ selected_genre }}" checked>
+            {{ selected_genre }}
+            <i class="fas fa-times-circle"></i>
+          </label>
+        {% endif %}
+        {% if selected_language %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="checkbox" name="selected-language" value="{{ selected_language }}" checked>
+            {{ selected_language }}
+            <i class="fas fa-times-circle"></i>
+          </label>
+        {% endif %}
+      </div>
+    {% endif %}
+    {% if genres %}
+      <div class="collapse options-collapse" id="genre-collapse">
         <div class="options-group" id="genre-buttons" data-toggle="buttons">
-          {% if selected_genre %}
+        {% if selected_genre %}
+          <label class="btn btn-dope options-button">
+            <input class="field-button" type="radio" name="genre" value="All">
+            All
+          </label>
+        {% else %}
+          <label class="btn btn-dope options-button active">
+            <input class="field-button" type="radio" name="genre" value="All" checked>
+            All
+          </label>
+        {% endif %}
+        {% for genre in genres %}
+          {% if not selected_genre == genre.name %}
             <label class="btn btn-dope options-button">
-              <input class="field-button" type="radio" name="genre" value="All">
-              All
-            </label>
-          {% else %}
-            <label class="btn btn-dope options-button active">
-              <input class="field-button" type="radio" name="genre" value="All" checked>
-              All
+              <input class="field-button" type="radio" name="genre" value="{{ genre.name }}">
+              {{ genre.name }}
             </label>
           {% endif %}
-          {% for genre in genres %}
-            {% if not selected_genre == genre.name %}
-              <label class="btn btn-dope options-button">
-                <input class="field-button" type="radio" name="genre" value="{{ genre.name }}">
-                {{ genre.name }}
-              </label>
-            {% endif %}
-          {% endfor %}
-        </div>
-      {% endif %}
-    </div>
-    <div class="collapse options-collapse" id="language-collapse">
-      {% if languages %}
+        {% endfor %}
+      </div>
+      </div>
+    {% endif %}
+    {% if languages %}
+      <div class="collapse options-collapse" id="language-collapse">
         <div class="options-group" id="language-buttons" data-toggle="buttons">
           {% if selected_language %}
             <label class="btn btn-dope options-button">
@@ -129,8 +135,8 @@ dopepod
             {% endif %}
           {% endfor %}
         </div>
-      {% endif %}
-    </div>
+      </div>
+    {% endif %}
   </div>
   {% if podcasts or subscriptions %}
   <div class="row results-wrapper">
@@ -169,10 +175,10 @@ dopepod
                 {% endif %}
                 {% endfor %}
                 {% if podcasts.has_next %}
-                {% if not podcasts.next_page_number == paginator.num_pages %}
+                {% if not podcasts.next_page_number == podcasts.paginator.num_pages %}
                 <li>
                   <label class="btn btn-dope page-button">
-                    <input class="field-button" type="radio" name="page" value="{{ paginator.num_pages }}">
+                    <input class="field-button" type="radio" name="page" value="{{ podcasts.paginator.num_pages }}">
                     <i class="fas fa-chevron-right"></i>
                     <i class="fas fa-chevron-right"></i>
                   </label>
@@ -185,9 +191,9 @@ dopepod
         </div>
       {% endif %}
 
-      {% block results_x %}
+      {% block results_content %}
       {% endblock %}
-      
+
       {% if podcasts.has_other_pages %}
         <div class="row pagination">
           <div class="col">
