--- a/podcasts/templates/results_list.html
+++ b/podcasts/templates/results_list.html
@@ -1,10 +1,10 @@
-{% extends 'index/results_base.html' %}
+{% extends 'results_base.html' %}
 
 {% block title %}
 dopepod
 {% endblock %}
 
-{% block results_x %}
+{% block results_content %}
 {% if podcasts %}
 <div class="row results-content">
   <div class="col-lg-3 col-md-6 col-sm-12">
