--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -1,4 +1,4 @@
-{% extends request.is_ajax|yesno:'ajax.html,base.html' %}
+{% extends dashboard|yesno:'base.html,ajax.html' %}
 
 {% block title %}
 dopepod
