--- a/index/templates/login.html
+++ b/index/templates/login.html
@@ -50,7 +50,7 @@ dopepod
       <div class="tab-content" id="pills-tabContent">
         {% if signup %}
           <div class="tab-pane fade" id="pills-login" role="tabpanel" aria-labelledby="pills-login-tab">
-            <form class="login-form" method="POST" action="{% url 'account_login' %}">
+            <form class="login-form" method="POST" action="{% url 'login' %}">
               {% csrf_token %}
               <div class="login-form-group">
                 <label class="sr-only" for="login-login">Email</label>
@@ -81,7 +81,7 @@ dopepod
             </form>
           </div>
           <div class="tab-pane fade show active" id="pills-signup" role="tabpanel" aria-labelledby="pills-signup-tab">
-            <form class="signup-form" method="POST" action="{% url 'account_signup' %}">
+            <form class="signup-form" method="POST" action="{% url 'signup' %}">
               {% csrf_token %}
               <div class="login-form-group">
                 <label class="sr-only" for="signup-email">Email</label>
@@ -111,7 +111,7 @@ dopepod
             <p>
               Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it.
             </p>
-            <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            <form method="POST" action="{% url 'reset_password' %}" class="password_reset">
               {% csrf_token %}
               <input type="email" name="email" size="30" placeholder="Email" required="" id="forgot-email">
               <input class="btn btn-dope" type="submit" value="Reset my password" />
@@ -119,7 +119,7 @@ dopepod
           </div>
         {% else %}
           <div class="tab-pane fade show active" id="pills-login" role="tabpanel" aria-labelledby="pills-login-tab">
-            <form class="login-form" method="POST" action="{% url 'account_login' %}">
+            <form class="login-form" method="POST" action="{% url 'login' %}">
               {% csrf_token %}
               <div class="login-form-group">
                 <label class="sr-only" for="login-login">Email</label>
@@ -150,7 +150,7 @@ dopepod
             </form>
           </div>
           <div class="tab-pane fade" id="pills-signup" role="tabpanel" aria-labelledby="pills-signup-tab">
-            <form class="signup-form" method="POST" action="{% url 'account_signup' %}">
+            <form class="signup-form" method="POST" action="{% url 'signup' %}">
               {% csrf_token %}
               <div class="login-form-group">
                 <label class="sr-only" for="signup-email">Email</label>
@@ -175,7 +175,7 @@ dopepod
             <p>
               Forgot your password? Enter your email address below, and we'll send you an email allowing you to reset it.
             </p>
-            <form class="password-form" method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+            <form class="password-form" method="POST" action="{% url 'reset_password' %}" class="password_reset">
               {% csrf_token %}
               <div class="form-row">
                 <div class="col login-form-group">
