--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -1,4 +1,4 @@
-{% extends request.is_ajax|yesno:'ajax.html,base.html' %}
+{% extends extend|yesno:'base.html,ajax.html' %}
 
 {% block title %}
 dopepod
@@ -12,21 +12,21 @@ dopepod
     </h5>
     <div class="nav" id="login-buttons" role="tablist">
       {% if signup %}
-        <a class="btn btn-dope" id="pills-login-tab" data-toggle="pill" href="#pills-login" role="tab" aria-controls="pills-login" aria-selected="false">
+        <a class="btn btn-dope login-toggle" id="pills-login-tab" data-toggle="pill" href="#pills-login" role="tab" aria-controls="pills-login" aria-selected="false">
           Login
         </a>
-        <a class="btn btn-dope active" id="pills-signup-tab" data-toggle="pill" href="#pills-signup" role="tab" aria-controls="pills-signup" aria-selected="true">
+        <a class="btn btn-dope active login-toggle" id="pills-signup-tab" data-toggle="pill" href="#pills-signup" role="tab" aria-controls="pills-signup" aria-selected="true">
           Signup
         </a>
       {% else %}
-        <a class="btn btn-dope active" id="pills-login-tab" data-toggle="pill" href="#pills-login" role="tab" aria-controls="pills-login" aria-selected="true">
+        <a class="btn btn-dope active login-toggle" id="pills-login-tab" data-toggle="pill" href="#pills-login" role="tab" aria-controls="pills-login" aria-selected="true">
           Login
         </a>
-        <a class="btn btn-dope" id="pills-signup-tab" data-toggle="pill" href="#pills-signup" role="tab" aria-controls="pills-signup" aria-selected="false">
+        <a class="btn btn-dope login-toggle" id="pills-signup-tab" data-toggle="pill" href="#pills-signup" role="tab" aria-controls="pills-signup" aria-selected="false">
           Signup
         </a>
       {% endif %}
-      <a id="pills-password-tab" data-toggle="pill" href="#pills-password" role="tab" aria-controls="pills-password" aria-selected="false">
+      <a class="d-none" id="pills-password-tab" data-toggle="pill" href="#pills-password" role="tab" aria-controls="pills-password" aria-selected="false">
       </a>
     </div>
     <div id="login-errors">
@@ -67,7 +67,7 @@ dopepod
               </div>
               <div class="form-row">
                 <div class="col">
-                  <a class="password-link" href="/x=y">
+                  <a class="password-link login-toggle" href="/?x=z">
                     Forgot Password?
                   </a>
                 </div>
@@ -111,7 +111,7 @@ dopepod
             <p>
               Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it.
             </p>
-            <form method="POST" action="{% url 'reset_password' %}" class="password_reset">
+            <form method="POST" action="{% url 'password_reset' %}">
               {% csrf_token %}
               <input type="email" name="email" size="30" placeholder="Email" required="" id="forgot-email">
               <input class="btn btn-dope" type="submit" value="Reset my password" />
@@ -136,7 +136,7 @@ dopepod
               </div>
               <div class="form-row">
                 <div class="col">
-                  <a class="password-link" href="/?x=z">
+                  <a class="password-link login-toggle" href="/?x=z">
                     Forgot Password?
                   </a>
                 </div>
@@ -175,7 +175,7 @@ dopepod
             <p>
               Forgot your password? Enter your email address below, and we'll send you an email allowing you to reset it.
             </p>
-            <form class="password-form" method="POST" action="{% url 'reset_password' %}" class="password_reset">
+            <form class="password-form" method="POST" action="{% url 'password_reset' %}">
               {% csrf_token %}
               <div class="form-row">
                 <div class="col login-form-group">
