--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -1,11 +1,11 @@
 <div class="col results">
   <div class="row results-bar">
     <div class="col results-header">
-      {{ chart_header }}
+      {{ chart.header }}
     </div>
     <div class="col-auto results-options">
       <ul>
-        {% if chart_selected_genre %}
+        {% if chart.genre %}
           <li>
             <a class="btn btn-dope btn-dope-tab toggle active" data-toggle="collapse" href="#chart-genre-collapse" aria-expanded="false" aria-controls="chart-genre-collapse">
               Genre
@@ -23,17 +23,17 @@
   </div>
   <form id="chart-form" method="GET" action="{% url 'charts' %}">
     <div class="row options-select color-1" id="chart-selected-buttons" data-toggle="buttons">
-      {% if chart_selected_genre %}
+      {% if chart.genre %}
       <div class="col-auto ml-auto options-group">
           <label class="btn btn-dope options-button active">
             <input class="field-button" type="checkbox" name="chart-genre" value="All">
-            {{ chart_selected_genre }}
+            {{ chart.genre }}
           </label>
         </div>
       {% endif %}
       <div class="collapse genre-options-collapse" id="chart-genre-collapse">
         <div class="options-group" id="chart-genre-buttons" data-toggle="buttons">
-          {% if chart_selected_genre %}
+          {% if chart.genre %}
             <label class="btn btn-dope options-button">
               <input class="field-button" type="radio" name="chart-genre" value="All">
               All
@@ -45,7 +45,7 @@
             </label>
           {% endif %}
           {% for genre in chart_genres %}
-            {% if not chart_selected_genre == genre.name %}
+            {% if not chart.genre == genre.name %}
               <label class="btn btn-dope options-button">
                 <input class="field-button" type="radio" name="chart-genre" value="{{ genre.name }}">
                 {{ genre.name }}
@@ -57,10 +57,10 @@
     </div>
     <div class="row results-wrapper">
       <div class="col">
-        {% for podcast in chart %}
+        {% for podcast in chart.sorted_podcasts %}
           <div class="row">
             <div class="col-auto">
-              {% if chart_selected_genre %}
+              {% if chart.genre %}
                 {{ podcast.genre_rank }}
               {% else %}
                 {{ podcast.global_rank }}
