--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,5 +1,5 @@
 <div class="col-3 col-md-4">
-  <a class="navbar-toggler toggle" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <a class="nav-link-dope navbar-toggler toggle" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
   </a>
   <div class="dropdown-menu navbar-dropdown color-2" aria-labelledby="navbar-dropdown">
@@ -10,18 +10,18 @@
         </a>
       </li> -->
       <li>
-        <a class="browse-link" href="{% url 'browse' %}">
+        <a class="nav-link-dope browse-link" href="{% url 'browse' %}">
           Browse
         </a>
       </li>
       {% if user.is_authenticated %}
       <li>
-        <a class="subscriptions-link" href="{% url 'subscriptions' %}">
+        <a class="nav-link-dope subscriptions-link" href="{% url 'subscriptions' %}">
           Subscriptions
         </a>
       </li>
       <li>
-        <a class="settings-link" href="{% url 'settings' %}">
+        <a class="nav-link-dope settings-link" href="{% url 'settings' %}">
           Settings
         </a>
       </li>
@@ -35,13 +35,13 @@
       </a>
     </li> -->
     <li>
-      <a class="browse-link d-none d-md-block" href="{% url 'browse' %}">
+      <a class="nav-link-dope browse-link d-none d-md-block" href="{% url 'browse' %}">
         Browse
       </a>
     </li>
     {% if user.is_authenticated %}
     <li>
-      <a class="subscriptions-link d-none d-md-block" href="{% url 'subscriptions' %}">
+      <a class="nav-link-dope subscriptions-link d-none d-md-block" href="{% url 'subscriptions' %}">
         Subscriptions
       </a>
     </li>
@@ -77,35 +77,35 @@
   <ul class="nav nav-fade">
     {% if user.is_authenticated %}
     <li class="ml-auto">
-      <a class="settings-link d-none d-md-block" href="{% url 'settings' %}">
+      <a class="nav-link-dope settings-link d-none d-md-block" href="{% url 'settings' %}">
         Settings
       </a>
-      <form class="logout-form" method="POST" action="{% url 'logout' %}">
+      <form class="logout-form d-block d-md-none" method="POST" action="{% url 'logout' %}">
         {% csrf_token %}
-        <button class="ajax-logout d-block d-md-none" type="submit">
+        <button class="nav-link-dope ajax-logout" type="submit">
           <i class="fas fa-sign-out-alt"></i>
         </button>
       </form>
     </li>
     <li>
-      <form class="logout-form" method="POST" action="{% url 'logout' %}">
+      <form class="logout-form d-none d-md-block" method="POST" action="{% url 'logout' %}">
         {% csrf_token %}
-        <button class="ajax-logout d-none d-md-block" type="submit">
+        <button class="nav-link-dope ajax-logout" type="submit">
           Logout
         </button>
       </form>
     </li>
     {% else %}
     <li class="ml-auto">
-      <a class="ajax-login d-none d-md-block" href="/">
+      <a class="nav-link-dope ajax-login d-none d-md-block" href="/">
         Login
       </a>
     </li>
     <li>
-      <a class="ajax-signup d-none d-md-block" href="/?signup=yeah">
+      <a class="nav-link-dope ajax-signup d-none d-md-block" href="/?signup=yeah">
         Signup
       </a>
-      <a class="ajax-login d-block d-md-none" href="/">
+      <a class="nav-link-dope ajax-login d-block d-md-none" href="/">
         <i class="fas fa-sign-in-alt"></i>
       </a>
     </li>
