--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -57,14 +57,14 @@ dopepod
           <label class="btn btn-dope options-button active">
             <input class="field-button" type="checkbox" name="selected-q" value="{{ selected_q }}" checked>
             {{ selected_q }}
-            <i class="fas fa-times-circle"></i>
+            <i class="fas fa-times-circle selected"></i>
           </label>
         {% endif %}
         {% if selected_alphabet %}
           <label class="btn btn-dope options-button active">
             <input class="field-button" type="checkbox" name="selected-q" value="{{ selected_alphabet }}" checked>
             {{ selected_alphabet }}
-            <i class="fas fa-times-circle"></i>
+            <i class="fas fa-times-circle selected"></i>
           </label>
         {% endif %}
       </div>
