--- a/index/static/style.css
+++ b/index/static/style.css
@@ -12,11 +12,22 @@ body {
   body {
     font-size: 12px;
   }
+  #podinfo-options {
+    margin: auto!important;
+  }
 }
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
   body {
     font-size: 13px;
+  }
+  #podinfo-options {
+    margin-left: auto!important;
+    border-left: 1px solid #ddd!important;
+    border-top: 1px solid #ddd!important;
+  }
+  #podinfo-bottom {
+    border: none!important;
   }
 }
 /* tablets/desktops and up ----------- */
@@ -24,11 +35,17 @@ body {
   body {
     font-size: 14px;
   }
+  #podinfo-options {
+    margin: auto!important;
+  }
 }
 /* large desktops and up ----------- */
 @media screen and (min-width: 1200px) {
   body {
     font-size: 14px;
+  }
+  #podinfo-options {
+    margin: auto!important;
   }
 }
 
@@ -54,9 +71,11 @@ body {
 .btn-dope.active {
   color: #fff;
   background: rgba(0, 204, 122, 1);
+}
+.btn.options-button {
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 5px;
   -moz-box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
-  box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
+  box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;  
 }
 .btn-dope-tab, .btn-dope-tab.focus, .btn-dope-tab:focus {
   border-radius: 2rem .25rem 0 0;
@@ -72,9 +91,9 @@ body {
 .toggle[aria-expanded="true"] {
   color: #fff;
   background: rgba(0, 204, 122, 1);
-  -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 3px;
-  -moz-box-shadow: rgba(0,0,0,.3) 0 0px 3px;
-  box-shadow: rgba(0,0,0,.3) 0 0px 3px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0px 5px;
+  -moz-box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
+  box-shadow: inset rgba(0,0,0,.3) 0 0px 5px;
 }
 .reverse-toggle[aria-expanded="false"] {
   color: #fff;
@@ -522,10 +541,13 @@ body {
 
 /* SETTINGS */
 #settings {
-  background: #ddd;
+  background: #fff;
   position: relative;
   height: 400px;
   padding: 15px;
+}
+#settings-form {
+  width: 300px;
 }
 
 /* PODINFO */
@@ -538,32 +560,50 @@ body {
   padding-top: 15px;
 }
 #podinfo-bottom {
-  padding-top: 10px;
-}
-#podinfo-main {
-  text-align: justify;
-  overflow: hidden;
-}
-#podinfo-side {
-  padding-right: 0;
+  border-top: 1px solid #ddd;
 }
 #podinfo-options {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
-#podinfo-side-list {
+#podinfo-main {
+  height: 330px;
+  overflow: hidden;
+}
+#podinfo-left {
+  background: #fff;
+  text-align: center;
+  padding-right: 0;
+  height: 330px;
+}
+#podinfo-right {
+  padding-top: 10px;
+  align-self: flex-end;
+}
+.podinfo-side-list {
+  text-align: left;
   list-style: none;
-  padding: 0;
-  margin-top: 6px;
+  padding-left: 0;
+  padding-top: 6px;
+  padding-bottom: 10px;
   margin-bottom: 0;
 }
-#podinfo-side-list li {
+#podinfo-left .podinfo-side-list li {
   margin-bottom: 4px;
-  max-height: 65px;
+  max-height: 63px;
   overflow: hidden;
+}
+#podinfo-right .podinfo-side-list li {
+  margin-bottom: 8px;
+  max-height: 63px;
+  overflow: hidden;
+}
+#podinfo-options {
 }
 #podinfo-copyright {
 
 }
-#podinfo-artist {
+#podinfo-title, #podinfo-artist {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -574,6 +614,7 @@ body {
 /* EPISODES */
 .hidden-row {
   padding: 0 !important;
+  background: #eee;
 }
 .more-collapse {
   text-align: justify;
@@ -599,8 +640,7 @@ body {
 }
 .episode-more {
   height: 100%;
-  margin: 10px;
-  background: #fff;
+  padding: 10px;
 }
 
 /* RESULTS */
@@ -656,6 +696,9 @@ body {
   top: 0;
   right: 0;
   padding-top: 8px;
+}
+.selected {
+  margin-left: 10px;
 }
 .results-minimize {
 
