--- a/index/templates/dashboard.html
+++ b/index/templates/dashboard.html
@@ -11,7 +11,7 @@ dopepod
       dashboard
     </h3>
     <p>
-      You have {{ subscriptions.count }}
+      You have {{ user.subscription_set.count }}
       <a class="subscriptions-link" href="{% url 'subscriptions' %}">
         subscriptions
       </a>
