--- a/index/templates/navbar.html
+++ b/index/templates/navbar.html
@@ -1,5 +1,5 @@
 <div class="col-3 col-md-4">
-  <a class="nav-link-dope navbar-toggler toggle" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <a class="nav-link-dope navbar-toggler" href="#" id="navbar-dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <i class="fas fa-bars"></i>
   </a>
   <div class="dropdown-menu navbar-dropdown color-2" aria-labelledby="navbar-dropdown">
